# ValiChord

./: .gitignore  ANTHROPIC_OUTREACH.md  CITATION.cff  CLAUDE.md  CLAUDE_INTEGRATION_PLAN.md  CONTRIBUTING.md  DEMO_1_TECHNICAL_EXPLANATION.md  DEMO_2_TECHNICAL_EXPLANATION.md  DEPLOYMENT.md  How to Think About Designing a Holochain, brock.md  NEXT_EMAIL_NOTES.md  NOTICE  ORACLE_SETUP.md  PROJECT_STATUS.md  README.md  TRADEMARK.md  ValiChord_Full_Proposal_v4.17_copyright.md  ValiChord_Governance_Framework_v1.3 copyright.md  ValiChord_Researcher_Support.md  all code I think.rs  at-home.html  codespaces_brief_attestation_format.md  codespaces_brief_challenge_response.md  codespaces_brief_readme_spec_polish.md  demo.html  failure-modes.html  governance.html  index.html  inspect_evals_issue_and_pr.md  phase0.html  pyrightconfig.json  questions.html  render.yaml  script  setup_holochain.sh  ssh-key-2026-04-13.key  valichord_issues_backlog.md  valichord_pilot_spec.md  vision.html
autogenerate/: valichord.py
backend/: README.md  app.py  app_protocol.py  holochain_bridge.py  openapi.yaml  openapi_protocol.yaml  requirements.txt  requirements_protocol.txt
business/: EIC_Accelerator_Application_Draft.md
demo/: AI_VALIDATOR_DEMO.md  CMA_UPGRADE_PLAN.md  CODESPACE_DEMO.md  CORE_BENCH_DEMO.md  DECENTRALISED_DEMO.md  DEMO_EXPLAINER.md  DEMO_VIDEO_SCRIPT.md  DEMO_WEBSITE.md  Dockerfile  Dockerfile.node  EEE_WORKED_EXAMPLE.md  HANDOVER.md  OLD AI_VALIDATOR_DEMO centralised.md  PEP_MASTER_DEMO.md  README.md  agreement.py  (+49 more)
valichord/: .gitignore  Cargo.toml  happ.yaml  pack_dna.py  rust-toolchain.toml
valichord/.cargo/: config.toml
valichord/coordinator_utils/: Cargo.toml
valichord/coordinator_utils/src/: lib.rs
valichord/dnas/attestation/: dna.yaml
valichord/dnas/attestation/zomes/attestation_coordinator/: Cargo.toml
valichord/dnas/attestation/zomes/attestation_coordinator/src/: lib.rs
valichord/dnas/attestation/zomes/attestation_integrity/: Cargo.toml
valichord/dnas/attestation/zomes/attestation_integrity/src/: lib.rs
valichord/dnas/governance/: dna.yaml
valichord/dnas/governance/zomes/governance_coordinator/: Cargo.toml
valichord/dnas/governance/zomes/governance_coordinator/src/: lib.rs
valichord/dnas/governance/zomes/governance_integrity/: Cargo.toml
valichord/dnas/governance/zomes/governance_integrity/src/: lib.rs
valichord/dnas/researcher_repository/: dna.yaml
valichord/dnas/researcher_repository/zomes/researcher_repository_coordinator/: Cargo.toml
valichord/dnas/researcher_repository/zomes/researcher_repository_coordinator/src/: lib.rs
valichord/dnas/researcher_repository/zomes/researcher_repository_integrity/: Cargo.toml
valichord/dnas/researcher_repository/zomes/researcher_repository_integrity/src/: lib.rs
valichord/dnas/validator_workspace/: dna.yaml
valichord/dnas/validator_workspace/zomes/validator_workspace_coordinator/: Cargo.toml
valichord/dnas/validator_workspace/zomes/validator_workspace_coordinator/src/: lib.rs
valichord/dnas/validator_workspace/zomes/validator_workspace_integrity/: Cargo.toml
valichord/dnas/validator_workspace/zomes/validator_workspace_integrity/src/: lib.rs
valichord/researcher/: happ.yaml
valichord/shared_types/: Cargo.toml
valichord/shared_types/src/: lib.rs
valichord/shared_types/tests/: agreement_golden.json
valichord/sweettest_integration/: Cargo.toml
valichord/sweettest_integration/.cargo/: config.toml
valichord/sweettest_integration/src/: lib.rs
valichord/sweettest_integration/tests/: attestation.rs  governance.rs  researcher_repository.rs  security.rs  validator_workspace.rs
valichord/tests/: README.md  package-lock.json  package.json  vitest.config.ts
valichord/tests/src/: attestation.test.ts  governance.test.ts  researcher_repository.test.ts  security.test.ts  validator_workspace.test.ts
valichord/validator/: happ.yaml
valichord/wind-tunnel/: .gitignore  Cargo.toml  README.md
valichord/wind-tunnel/scenarios/concurrent_reveal_throughput/: Cargo.toml
valichord/wind-tunnel/scenarios/concurrent_reveal_throughput/src/: main.rs
valichord/wind-tunnel/scenarios/dht_sync_lag/: Cargo.toml
valichord/wind-tunnel/scenarios/dht_sync_lag/src/: main.rs
valichord/wind-tunnel/scenarios/kitsune_dht_propagation/: Cargo.toml
valichord/wind-tunnel/scenarios/kitsune_dht_propagation/src/: main.rs
valichord/wind-tunnel/scenarios/phase_observation_latency/: Cargo.toml
valichord/wind-tunnel/scenarios/phase_observation_latency/src/: main.rs
valichord/wind-tunnel/scenarios/valichord_wt_common/: Cargo.toml
valichord/wind-tunnel/scenarios/valichord_wt_common/src/: lib.rs
valichord/wind-tunnel/scenarios/validation_request_throughput/: Cargo.toml
valichord/wind-tunnel/scenarios/validation_request_throughput/src/: main.rs
valichord/workdir/: researcher.happ  validator.happ
valichord_attestation/: .gitignore  README.md  pyproject.toml
valichord_attestation/examples/: DEMO_TEMPLATE.md  README.md  challenge_response_demo.py  complex_eval.json  simple_eval.json  verify_examples.py
valichord_attestation/examples/inspect_ai_popularity_demo/: README.md  build_bundle.py  bundle.json  challenge_response_demo.py  download_eval.sh  verify_demo.sh
valichord_attestation/examples/mistral_7b_gsm8k_demo/: README.md  build_bundle.py  bundle.json  challenge_response_demo.py  requirements.txt  run_eval.sh  verify_demo.sh
valichord_attestation/spec/: attestation_format_v1.md
valichord_attestation/tests/: test_adapters.py  test_ailuminate_adapter.py  test_builder.py  test_bundle.py  test_canonical.py  test_challenge.py  test_inspect_ai_log_adapter.py  test_lm_eval_adapter.py  test_merkle.py  test_pi_session_adapter.py  test_response.py  test_wandb_adapter.py
valichord_attestation/valichord_attestation/: __init__.py  builder.py  bundle.py  canonical.py  challenge.py  merkle.py  response.py
valichord_attestation/valichord_attestation/adapters/: __init__.py  ailuminate_adapter.py  base.py  inspect_ai_log_adapter.py  inspect_evals_stub.py  lm_eval_adapter.py  pi_session_adapter.py  wandb_adapter.py
(+141 files in other folders)
