[workspace]
resolver = "2"
members = [
    "shared_types",
    "dnas/attestation/zomes/attestation_integrity",
    "dnas/attestation/zomes/attestation_coordinator",
]

[workspace.dependencies]
hdi = "0.7"
hdk = "0.6"
serde = { version = "1", features = ["derive"] }

# getrandom 0.3 requires an explicit backend for wasm32-unknown-unknown.
# The custom backend is activated via --cfg getrandom_backend="custom" in
# .cargo/config.toml (wasm32 target). The coordinator zome provides the
# required __getrandom_v03_custom stub (never called at runtime — HDK
# provides randomness via host functions).
getrandom = "0.3"
