[workspace]
resolver = "2"
members = [
    "shared_types",
    "dnas/attestation/zomes/attestation_integrity",
    "dnas/attestation/zomes/attestation_coordinator",
    "dnas/researcher_repository/zomes/researcher_repository_integrity",
    "dnas/researcher_repository/zomes/researcher_repository_coordinator",
]

[workspace.dependencies]
hdi = "0.7"
hdk = "0.6"
serde = { version = "1", features = ["derive"] }
holochain_serialized_bytes = "=0.0.56"

# getrandom 0.3 requires an explicit backend for wasm32-unknown-unknown.
# The custom backend is activated via --cfg getrandom_backend="custom" in
# .cargo/config.toml (wasm32 target). The coordinator zome provides the
# required __getrandom_v03_custom stub (never called at runtime — HDK
# provides randomness via host functions).
getrandom = "0.3"

# SHA-256 for research file fingerprints (engineering constraint #6).
# Compiled to wasm32-unknown-unknown; no_std-compatible via features.
sha2 = { version = "0.10", default-features = false }
