[workspace]
resolver = "2"
members = [
    "shared_types",
    "coordinator_utils",
    "dnas/attestation/zomes/attestation_integrity",
    "dnas/attestation/zomes/attestation_coordinator",
    "dnas/researcher_repository/zomes/researcher_repository_integrity",
    "dnas/researcher_repository/zomes/researcher_repository_coordinator",
    "dnas/validator_workspace/zomes/validator_workspace_integrity",
    "dnas/validator_workspace/zomes/validator_workspace_coordinator",
    "dnas/governance/zomes/governance_integrity",
    "dnas/governance/zomes/governance_coordinator",
]

[workspace.dependencies]
valichord_coordinator_utils = { path = "coordinator_utils" }
hdi = "=0.7.1"
hdk = "=0.6.1"
serde = { version = "1", features = ["derive"] }
holochain_serialized_bytes = "=0.0.57"
# getrandom 0.3 requires an explicit backend for wasm32-unknown-unknown.
# The custom backend is activated via --cfg getrandom_backend="custom" in
# .cargo/config.toml (wasm32 target). The coordinator zome provides the
# required __getrandom_v03_custom stub (never called at runtime — HDK
# provides randomness via host functions).
getrandom = "0.3"
# SHA-256 for research file fingerprints (engineering constraint #6).
# Compiled to wasm32-unknown-unknown; no_std-compatible via features.
sha2 = { version = "0.10", default-features = false }
rmp-serde = "1.3"
thiserror = "1"

[workspace.dev-dependencies]
fixt = "0.6"

# ── WASM size optimisation ────────────────────────────────────────────────────
# Each coordinator zome is ~5.5 MB unoptimised. With opt-level=z + thin-LTO
# the WASMs shrink to ~2–3 MB, cutting Holochain JIT-compile time per conductor
# startup by ~50%. This matters for Tryorama tests where each runScenario starts
# a fresh conductor that loads all 8 WASMs from scratch (~30 MB total).
[profile.release]
opt-level     = "z"     # optimise for size; reduces wasm binary size
lto           = "thin"  # thin-LTO: better dead-code elim, reasonable build time
codegen-units = 1       # one codegen unit enables better dead-code elimination
