[package]
name = "valichord_shared_types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
