[workspace]

[package]
name = "valichord_sweettest"
version = "0.1.0"
edition = "2021"
publish = false

# This crate is intentionally NOT a workspace member — it depends on
# holochain = "0.6.1" (native conductor) which cannot compile to wasm32.
# Adding it to the workspace would break `cargo build --target wasm32-unknown-unknown`.
#
# Usage:
#   # 1. Build WASMs and pack DNAs (from valichord/):
#   #    cargo build --target wasm32-unknown-unknown --release
#   #    hc dna pack dnas/attestation            -o workdir/attestation.dna
#   #    hc dna pack dnas/researcher_repository  -o workdir/researcher_repository.dna
#   #    hc dna pack dnas/validator_workspace    -o workdir/validator_workspace.dna
#   #    hc dna pack dnas/governance             -o workdir/governance.dna
#   #    hc app pack . -o workdir/valichord.happ
#   # 2. Run Sweettest suite (from valichord/sweettest_integration/):
#   #    cargo test

[lib]
name = "valichord_sweettest"

# Debug builds of holochain + wasmer + cranelift generate enormous amounts of
# DWARF data (~4 GB) that exceeds the 32 GB Codespace limit. Disabling debug
# info shrinks the build to ~1-1.5 GB while keeping tests fully functional;
# the only loss is file:line in backtraces.
[profile.dev]
debug = 0

# ---------------------------------------------------------------------------
# Runtime dependencies (also available to integration tests via the lib crate)
# ---------------------------------------------------------------------------

[dependencies]
holochain = { version = "=0.6.1", features = ["test_utils"] }
holochain_types = "=0.6.1"
holochain_keystore = "=0.6.1"
hdk = "=0.6.1"
holo_hash = "=0.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = { version = "0.10", default-features = false }
rmp-serde = "1.3"
# Pin pkcs8 to the pre-release version that holochain 0.6.1 was built against.
# pkcs8 0.11.0 stable changed Error::KeyMalformed from a unit variant to
# KeyMalformed(KeyError), breaking ed25519-dalek 3.0.0-pre.1 (a holochain dep).
# Remove this pin when upgrading to a holochain version that uses a compatible
# release of pkcs8 and ed25519-dalek.
pkcs8 = "=0.11.0-rc.11"

# ValiChord types — rlib output allows native compilation for type access.
# Coordinator functions themselves are not called directly from tests
# (calls go through SweetConductor), but the input/output structs are used
# to construct typed payloads and decode responses without msgpack guesswork.
attestation_coordinator  = { path = "../dnas/attestation/zomes/attestation_coordinator" }
attestation_integrity    = { path = "../dnas/attestation/zomes/attestation_integrity" }
researcher_repository_coordinator = { path = "../dnas/researcher_repository/zomes/researcher_repository_coordinator" }
researcher_repository_integrity   = { path = "../dnas/researcher_repository/zomes/researcher_repository_integrity" }
validator_workspace_coordinator   = { path = "../dnas/validator_workspace/zomes/validator_workspace_coordinator" }
validator_workspace_integrity     = { path = "../dnas/validator_workspace/zomes/validator_workspace_integrity" }
governance_coordinator   = { path = "../dnas/governance/zomes/governance_coordinator" }
governance_integrity     = { path = "../dnas/governance/zomes/governance_integrity" }
valichord_shared_types   = { path = "../shared_types" }
