[package]
name = "kitsune_dht_propagation"
version = "0.1.0"
edition = "2021"
publish = false

# PROTOTYPE — measures raw peer-to-peer message propagation at the Kitsune2
# networking substrate, *beneath* ValiChord's DNA / commit-reveal layer.
#
# Why this exists:
#   ValiChord's whole value proposition rides on DHT gossip — a CommitmentAnchor
#   or PhaseMarker written by one agent must become visible to others.  Our
#   other scenarios (phase_observation_latency, concurrent_reveal_throughput)
#   measure that at the *application* layer: zome call -> entry -> query.  That
#   conflates two things — how fast our DNA logic is, and how fast the network
#   underneath it is.  This scenario isolates the second: it uses the Kitsune2
#   bindings (no ValiChord DNAs at all) to answer "how fast is the gossip
#   substrate itself?".  It is the natural baseline for interpreting the
#   `DepMissingFromDht` transient-gossip-lag noise we see in the app-layer runs.
#
# What it does NOT do (honest scope):
#   - It runs NO ValiChord code.  It does not exercise attestation, commit-reveal,
#     HarmonyRecords, or any zome.  It is a substrate benchmark only.
#   - For ValiChord-*entry* cross-agent propagation specifically, a dht_sync_lag
#     style Holochain scenario (writer agent + reader agents over a ValiChord
#     entry) is the better fit — noted as the follow-up in main.rs.
#
# Requires BOTH a running Kitsune2 bootstrap server (kitsune2-bootstrap-srv
# 0.4.1, the same binary the test suite already uses) AND an Iroh relay server
# — the iroh/QUIC transport needs the relay for NAT traversal/peer discovery.
# Confirm exact flags with `--help`; as of runner 0.7.0 they are:
#   cargo run -p kitsune_dht_propagation -- \
#     --bootstrap-server-url http://127.0.0.1:30000 \
#     --relay-url <iroh-relay-url> \
#     --agents 2 --duration 30

[[bin]]
name = "kitsune_dht_propagation"
path = "src/main.rs"

[dependencies]
kitsune_wind_tunnel_runner = "0.7"
anyhow = "1"
rand = "0.9"
tokio = { version = "1", features = ["time"] }

# --- Transitive pre-release pins (DO NOT REMOVE) ---------------------------
# kitsune_wind_tunnel_runner -> kitsune2 -> kitsune2_transport_iroh ->
# iroh-base-holochain 0.95.1 -> ed25519-dalek 3.0.0-pre.1, a pre-release that
# only compiles against the RELEASE-CANDIDATE pkcs8/ed25519 crates (the final
# 0.11.0 / 3.0.0 releases changed `pkcs8::Error::KeyMalformed` from a unit to a
# tuple variant and break the build). An unconstrained `cargo update` greedily
# picks the final releases and silently breaks the Kitsune scenario, so we pin
# the two transitive crates here as direct (otherwise-unused) deps to keep the
# constraint in the manifest, not just Cargo.lock. These match the versions in
# holochain/wind-tunnel's own committed lockfile. The Holochain scenarios are
# unaffected (they use ed25519-dalek 2.x). Revisit when the iroh stack moves to
# a non-pre-release ed25519-dalek.
pkcs8 = "=0.11.0-rc.11"
ed25519 = "=3.0.0-rc.4"
