[package]
name = "attestation_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
valichord_shared_types = { path = "../../../../shared_types" }
attestation_integrity = { path = "../attestation_integrity" }
getrandom = { workspace = true }
sha2 = { workspace = true }
rmp-serde = { workspace = true }
