[package]
name = "governance_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "governance_coordinator"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
valichord_shared_types = { path = "../../../../shared_types" }
governance_integrity = { path = "../governance_integrity" }
attestation_integrity = { path = "../../../attestation/zomes/attestation_integrity" }
getrandom = { workspace = true }
